--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     font-family: "Poppins", sans-serif;
-    background-image: url('icons/wall.jpg'); 
+    background-image: url('icons/back.jpg'); 
     background-size: cover;       
     background-position: center;  
     background-repeat: no-repeat; 
@@ -253,5 +253,6 @@ input:focus {
   0%, 100% { opacity: 0.8; filter: brightness(1); }
   50% { opacity: 1; filter: brightness(2); }
 }
+
 
 
